--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ p {
 
         .para-1 {
             margin: 20px;
-            font-size: 36px;
+            font-size: 3.6rem;
             text-align: center;
         }
 
